Tests/pass/booleanValues.php
<?php
// Boolean values and null should be referenced by name and in all lowercase letters.

$value = true;
$value = false;
$value = null;

?>