Tests/fail/booleanValues.php
<?php
// Boolean values and null should be referenced by name and in all lowercase letters.

$value = TRUE;
$value = FALSE;
$value = NULL;

?>